* Thu Aug 31 2023 Steven Pritchard <steve@sicura.us> - 7.4.0
- Add AlmaLinux 8 support

* Mon Jun 12 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.3.0
- Add RockyLinux 8 support

* Thu Jun 17 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.2.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Fri Jan 29 2021 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 7.1.2
- Added EL8 support after verifying the module worked on EL8 machines.

* Sat Dec 19 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.1.2
- Removed EL6 support

* Thu Jul 23 2020 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 7.1.1-0
- update the upper bound of simplib for SIMP 6.5 release

* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 7.1.0-0
- Drop Puppet 4 support
- Add Puppet 6 support
- Add puppetlabs-stdlib 6 support

* Wed Feb 13 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 7.0.1-0
- Use Simplib::Port data type in lieu of deprecated, simplib
  Puppet 3 validate_port()
- Use new Vnc::Geometry data type in lieu of deprecated,
  stdlib validate_re()
- Updated a URL in the README.md

* Thu Nov 01 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 7.0.0-0
- Update the contribution guide URL in the README.md

* Thu Sep 13 2018 Nick Miller <nick.miller@onyxpoint.com> - 7.0.0-0
- Add support for Puppet 5 and OEL
- Convert docs to yard tags and add reference.md
- Added $package_ensure parameters to vnc::server and vnc::client
  - Changed the packages from 'latest' to 'installed'
  - Each will also respect `simp_options::package_ensure`

* Fri Jun 22 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.0.0-0
- Remove automatic setting of the XDMCP setting in GDM - BREAKING
  - It was determined that this should be something that the administrator
    should explicitly opt into by setting it in the GDM module settings via
    Hiera since it has security implications

* Tue May 08 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.3-0